--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-port-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Tmartinez0202.github.io/react-portfolio",
+  "homepage": "/https://Tmartinez0202.github.io/react-portfolio/",
   "dependencies": {
     "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
