--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-port-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/https://Tmartinez0202.github.io/react-portfolio/home",
+  "homepage": "/https://Tmartinez0202.github.io/react-portfolio",
   "dependencies": {
     "-": "0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
-    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
